unpackaged/main/default/objects/IDAnalyticsEndPoint__c/IDAnalyticsEndPoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IDAnalyticsEndPoint</label>
</CustomObject>