unpackaged/main/default/objects/IDAnalyticsEndPoint__c/fields/APIKEY__c.field-meta.xml
<CustomField>
    <fullName>APIKEY__c</fullName>
    <description>ID Analytics APIKEY</description>
    <label>APIKEY</label>
    <length>36</length>
    <type>Text</type>
</CustomField>