unpackaged/main/default/objects/IDAnalyticsEndPoint__c/fields/GetToken__c.field-meta.xml
<CustomField>
    <fullName>GetToken__c</fullName>
    <description>ID Analytics Get Token URL</description>
    <label>GetToken</label>
    <type>Url</type>
</CustomField>