unpackaged/main/default/objects/IDAnalyticsEndPoint__c/fields/IDAnalyticsEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>IDAnalyticsEndpointUrl__c</fullName>
    <description>ID Analytics Endpoint URL</description>
    <label>IDAnalyticsEndpointUrl</label>
    <type>Url</type>
</CustomField>